# gitlab-runner-rs

./: Cargo.toml  README.md
.github/: dependabot.yaml
.github/workflows/: ci.yml
gitlab-runner/: CHANGELOG.md  Cargo.toml  README.md  build.rs
gitlab-runner-mock/: CHANGELOG.md  Cargo.toml
gitlab-runner-mock/src/: job.rs  lib.rs  variables.rs
gitlab-runner-mock/src/api/: artifacts.rs  mod.rs  request.rs  trace.rs  update.rs
gitlab-runner/examples/: demo-runner.rs
gitlab-runner/src/: artifact.rs  client.rs  job.rs  lib.rs  logging.rs  run.rs  runlist.rs  uploader.rs
gitlab-runner/tests/: artifacts.rs  integration.rs  masking.rs  runhandler.rs
