[package]
name = "gitlab-runner-mock"
version = "0.1.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mock crate for gitlab runners"
homepage = "https://github.com/collabora/gitlab-runner-rs"
repository = "https://github.com/collabora/gitlab-runner-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiremock = "0.6"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
thiserror = "1.0.59"
http = "1.0.0"
multer = "3.0.0"
futures = "0.3.15"
