[package]
name = "gitlab-runner-mock"
version = "0.2.1"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Mock crate for gitlab runners"
homepage = "https://github.com/collabora/gitlab-runner-rs"
repository = "https://github.com/collabora/gitlab-runner-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiremock = "0.6"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.64"
url = "2.5.4"
thiserror = "2.0.11"
http = "1.2.0"
multer = "3.0.0"
futures = "0.3.15"
