[package]
name = "gitlab-runner"
version = "0.2.0"
authors = ["Sjoerd Simons <sjoerd@collabora.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Helper crate to build custom gitlab runners"
homepage = "https://github.com/collabora/gitlab-runner-rs"
repository = "https://github.com/collabora/gitlab-runner-rs"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.1.2"
glob = "0.3"
reqwest = { version = "0.12.20", features = [ "json", "multipart", "stream" ] }
tokio = { version = "1.45.1", features = [ "full" ] }
url = "2.5.4"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_json = "1.0.140"
thiserror = "2.0.12"
bytes = "1.10.1"
zip = "4.1.0"
pin-project = "1.1.10"
futures = "0.3.31"
async-trait = "0.1.88"
tempfile = "3.20.0"
parking_lot = "0.12.4"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
doc-comment = "0.3.3"
sha2 = "0.10.9"
hmac = "0.12.1"
rand = "0.9.1"
tokio-util = { version = "0.7.15", features = [ "io" ] }
tokio-retry2 = { version = "0.5.7", features = ["jitter"] }

[dev-dependencies]
tokio = { version = "1.45.1", features = [ "full", "test-util" ] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
gitlab-runner-mock = { path = "../gitlab-runner-mock", version = "0.2.0" }
futures = "0.3.31"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
clap_derive = "4.5.40"

[build-dependencies]
vergen-gitcl = "1.0.8"
